--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,12 @@
         "array-bracket-spacing": 0, // 指定数组的元素之间要以空格隔开(,后面)
         "arrow-parens": 0
     },
+    "globals": {
+        "window": true,
+        "Vue": true,
+        "popup": "readonly",
+        "util": "readonly"
+    },
     "plugins": ["html"],
     "settings": {
         "html/html-extensions": [".html"]
