--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-performance-monitoring-system",
+  "name": "fd-pms",
   "version": "1.0.0",
   "description": "前端性能监控系统",
   "private": true,
