添加手机号

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,8 @@
         "window": true,
         "Vue": true,
         "popup": "readonly",
-        "util": "readonly"
+        "util": "readonly",
+        "$": "readonly"
     },
     "plugins": ["html"],
     "settings": {
