--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "egg": "^2.2.1",
     "egg-alinode": "^2.0.1",
     "egg-cors": "^2.1.0",
+    "egg-es": "^1.2.2",
     "egg-mongoose": "^3.1.0",
     "egg-redis": "^2.0.0",
     "egg-router-plus": "^1.3.0",
